Corrected build file to include logkit jar in dist and updated to current phoenix jars.
git-svn-id: https://svn.apache.org/repos/asf/james/server@107451 13f79535-47bb-0310-9956-ffa450edef68