@@ -1,5 +1,15 @@
 #! /bin/sh
+#
+# Phoenix start script.
+#
+# Author: Peter Donald <donaldp@apache.org>
+#
+# The user may choose to supply parameters to the JVM (such as memory settings)
+# via setting the environment variable PHOENIX_JVM_OPTS
+#
 
+# Checking for JAVA_HOME is required on *nix due
+# to some distributions stupidly including kaffe in /usr/bin
 if [ "$JAVA_HOME" = "" ] ; then
   echo "ERROR: JAVA_HOME not found in your environment."
   echo
@@ -8,4 +18,29 @@ if [ "$JAVA_HOME" = "" ] ; then
   exit 1
 fi
 
-$JAVA_HOME/bin/java $PHOENIX_JVM_OPTS -jar phoenix-loader.jar $*
+#
+# Locate where phoenix is in filesystem
+#
+THIS_PROG=`dirname $0`
+
+if [ "$THIS_PROG" = "." ] ; then
+  THIS_PROG=$PWD
+fi
+
+PHOENIX_HOME=$THIS_PROG/..
+unset THIS_PROG
+
+# echo "Home directory: $PHOENIX_HOME"
+# echo "Home ext directory: $PHOENIX_HOME/lib"
+
+#
+# Command to overide JVM ext dir
+#
+# This is needed as some JVM vendors do foolish things
+# like placing jaxp/jaas/xml-parser jars in ext dir
+# thus breaking Phoenix
+#
+JVM_OPTS="-Djava.ext.dirs=$PHOENIX_HOME/lib $PHOENIX_JVM_OPTS"
+
+# Kicking the tires and lighting the fires!!!
+$JAVA_HOME/bin/java $JVM_OPTS -jar $PHOENIX_HOME/bin/phoenix-loader.jar $*
